--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script src="app.js"></script>
-    <style></style>
+    <link rel="stylesheet" href="styl.css">
+
 </head>
 <body>
     <!--<p>My life is full of enjoyment and I always do fun...<br>
@@ -21,7 +22,11 @@
 
     <!--<img src="google.png" class="hello" id="yes" onmouseover="get();" >-->
 
-    <a href="#" id="yes" style="margin: 20px 0 0 20px" onmouseover="showAlert();">hello world</a>
+    <!--<a href="#" id="yes" style="margin: 20px 0 0 20px" onmouseover="showAlert();">hello world</a>-->
+
+    <p class="hidden" style="margin-left:10px" id="para2">hello world <a href="Javascript:void(0)" id="a" onclick="expand();">click here for more</a>
+    <span id="para"></span>
+    </p>
 
 
 </body>
